# creatures3-engine-port

./: .gitignore  CMakeLists.txt  Makefile  README.md  SDL2_Migration_Handoff.md
common/: BasicException.cpp  BasicException.h  C2eDebug.cpp  C2eDebug.h  C2eTypes.h  CStyleException.cpp  CStyleException.h  Catalogue.cpp  Catalogue.h  Configurator.cpp  Configurator.h  FileLocaliser.cpp  FileLocaliser.h  Grapher.cpp  LabelThing.cpp  LabelThing.h  MapScanner.cpp  Position.cpp  RegistryHandler.cpp  RegistryHandler.h  ServerSide.cpp  ServerSide.h  SimpleLexer.cpp  SimpleLexer.h  Vector2D.cpp  Vector2D.h  WhichEngine.cpp  WindowState.cpp  WindowState.h  clientside.cpp  clientside.h  module.mk
common/PRAYFiles/: PrayBuilder.cpp  PrayBuilder.h  PrayChunk.cpp  PrayChunk.h  PrayException.h  PrayHandlers.cpp  PrayHandlers.h  PrayManager.cpp  PrayManager.h  StringIntGroup.cpp  StringIntGroup.h
common/unix/: ServerSide.h
engine/: AgentManager.cpp  AgentManager.h  App.cpp  App.h  C2eServices.cpp  C2eServices.h  CPUID.cpp  CPUID.h  ChangesSinceLastVersion.txt  Classifier.cpp  Classifier.h  CosInstaller.cpp  CosInstaller.h  CreaturesArchive.cpp  CreaturesArchive.h  CustomHeap.cpp  DebugServer.cpp  DebugServer.h  Entity.cpp  Entity.h  File.cpp  File.h  FilePath.cpp  FilePath.h  FlightRecorder.cpp  FlightRecorder.h  General.cpp  General.h  IAgentManager.h  IApp.h  IWorldServices.h  InputEvent.h  InputManager.cpp  InputManager.h  Maths.cpp  Maths.h  Message.cpp  Message.h  OBSOLETE_FileFuncs.cpp  PersistentObject.cpp  (+20 more)
engine/Agents/: .!69012!QuoteFactory.cpp  Agent.cpp  Agent.h  AgentConstants.h  AgentHandle.cpp  AgentHandle.h  CameraPart.cpp  CameraPart.h  CompoundAgent.cpp  CompoundAgent.h  CompoundPart.cpp  CompoundPart.h  InputPort.cpp  InputPort.h  MessageQueue.cpp  MessageQueue.h  OutputPort.cpp  OutputPort.h  PointerAgent.cpp  PointerAgent.h  PointerAgent_Logic.cpp  PointerAgent_Logic.h  Port.cpp  Port.h  PortBundle.cpp  PortBundle.h  QuoteFactory.cpp  QuoteFactory.h  QuoteFactoryHelper.h  SimpleAgent.cpp  SimpleAgent.h  TextFormatting.h  UIPart.cpp  UIPart.h  Vehicle.cpp  Vehicle.h
engine/Caos/: AgentHandlers.cpp  AgentHandlers.h  AgentHandlers_Logic.cpp  AppHandlers_Logic.cpp  AutoDocumentationTable.cpp  AutoDocumentationTable.h  CAOSDescription.cpp  CAOSDescription.h  CAOSException.cpp  CAOSException.h  CAOSMachine.cpp  CAOSMachine.h  CAOSTables.cpp  CAOSTables.h  CAOSTables_SubTables.cpp  CAOSVar.cpp  CAOSVar.h  CompoundHandlers.cpp  CompoundHandlers.h  CreatureHandlers.cpp  CreatureHandlers.h  DebugHandlers.cpp  DebugHandlers.h  DebugInfo.cpp  DebugInfo.h  DisplayHandlers.cpp  DisplayHandlers.h  GeneralHandlers.cpp  GeneralHandlers.h  GeneralHandlers_Logic.cpp  HistoryHandlers.cpp  HistoryHandlers.h  HistoryHandlers_Logic.cpp  Lexer.cpp  Lexer.h  MacroScript.cpp  MacroScript.h  MapHandlers.cpp  MapHandlers.h  MapHandlers_Logic.cpp  (+19 more)
engine/Catalogues/: ChemicalNames.catalogue
engine/Creature/: BodyPartOverlay.cpp  BodyPartOverlay.h  Creature.cpp  Creature.h  CreatureConstants.h  CreatureHead.cpp  CreatureHead.h  Definitions.h  ExpressiveFaculty.cpp  ExpressiveFaculty.h  Faculty.cpp  Faculty.h  Genome.cpp  Genome.h  GenomeStore.cpp  GenomeStore.h  LifeFaculty.cpp  LifeFaculty.h  LinguisticFaculty.cpp  LinguisticFaculty.h  MonikerGeneration.cpp  MotorFaculty.cpp  MotorFaculty.h  MusicFaculty.cpp  MusicFaculty.h  ReproductiveFaculty.cpp  ReproductiveFaculty.h  SensoryFaculty.cpp  SensoryFaculty.h  Skeleton.cpp  Skeleton.h  SkeletonConstants.h  Vocab.cpp  Vocab.h  voice.cpp  voice.h
engine/Display/: BackGroundGallery.h  Background.cpp  Background.h  BackgroundGallery.cpp  Bitmap.cpp  Bitmap.h  Camera.cpp  Camera.h  ClonedGallery.cpp  ClonedGallery.h  ClonedSprite.cpp  ClonedSprite.h  CompressedBitmap.cpp  CompressedBitmap.h  CompressedGallery.cpp  CompressedGallery.h  CompressedSprite.cpp  CompressedSprite.h  CreatureGallery.cpp  CreatureGallery.h  DisplayEngine.cpp  DisplayEngine.h  DisplayEnginePlotFunctions.h  DrawableObject.cpp  DrawableObject.h  DrawableObjectHandler.cpp  DrawableObjectHandler.h  EntityImage.cpp  EntityImage.h  EntityImageClone.cpp  EntityImageClone.h  EntityImageWithEmbeddedCamera.cpp  EntityImageWithEmbeddedCamera.h  ErrorDialog.cpp  ErrorDialog.h  ErrorMessageHandler.cpp  ErrorMessageHandler.h  FastDrawingObject.cpp  FastDrawingObject.h  FastEntityImage.cpp  (+26 more)
engine/Map/: CARates.cpp  CARates.h  IMap.h  Map.cpp  Map.h  MapCA.cpp  RoomCA.cpp  RoomCA.h
engine/Sound/: MNGFormat.h  MidiModule.cpp  MidiModule.h  MusicAction.cpp  MusicAction.h  MusicAleotoricLayer.cpp  MusicAleotoricLayer.h  MusicEffect.cpp  MusicEffect.h  MusicExpression.cpp  MusicExpression.h  MusicGlobals.cpp  MusicGlobals.h  MusicLayer.cpp  MusicLayer.h  MusicWave.h  (+20 more)
mcp/: MCP.md  README.md  package-lock.json  package.json  server.js
monitor/: README.md  app.js  index.html  package-lock.json  package.json  relay.js  run.sh  style.css
tests/: CMakeLists.txt  stub_AgentHandle.cpp  stub_App.cpp  stub_Catalogue.cpp  stub_CreatureHistory.cpp  stub_CreaturesArchive.cpp  stub_ErrorMessageHandler.cpp  stub_FakeApp.h  stub_File.cpp  stub_FilePath.cpp  stub_General.cpp  stub_GenomeDeps.cpp  stub_HistoryStore.cpp  stub_InputManager.cpp  stub_Lexer.cpp  stub_NullAgentManager.h  stub_NullMap.h  stub_NullWorldServices.h  stub_Orderiser.cpp  stub_V39_CreatureHistory.cpp  test_AgentHandlers.cpp  test_AgentManager.cpp  test_AppHandlers.cpp  test_CAOSMachineCallStack.cpp  test_CAOSVar.cpp  test_Catalogue.cpp  test_Classifier.cpp  test_CompoundAgent.cpp  test_Configurator.cpp  test_CreaturesArchive.cpp  test_FilePath.cpp  test_GeneralHandlers.cpp  test_Genome.cpp  test_GenomeStore.cpp  test_GetFilesInDirectory.cpp  test_HistoryHandlers.cpp  test_InputManager.cpp  test_IntegrationTier1.cpp  test_IntegrationTier2.cpp  test_IntegrationTier3.cpp  (+13 more)
tools/: ARCHITECTURE.md  README.md  TOOLS.md  app.js  brain.js  caos_format.js  caos_ide.js  creatures.js  debugger.js  debugger_view.js  docs.js  gene_renderer.js  genetics.js  genome.js  index.html  organs.js  scripts.js  style.css  svrule.js  tooltips.js  utils.js
(+87 files in other folders)
